@@ -4,6 +4,7 @@ next:
 	- sece: make sure valid=false is always caught as CodeServerLicenseInvalid
 	- *ece: fix typo which caused congestion avoidance to be applied also to QCC
 	- crypto: new requestFromAuth to set QNetworkRequest from libencloud::Auth
+	- api: id and type are really optional and have proper defaults
 	- [CONNECT-201] Add OS to HTTP User-Agent
 
 libencloud 0.7.6 (28/01/2015)
